fix image in the review section mobile version

--- a/css/main.css
+++ b/css/main.css
@@ -328,7 +328,6 @@ article{
 
 .reviews .content-wrapper{
 
-  height: 600px;
   margin: 40px 30px;
   color: #fff;
 
